cluster-apps/frigate/templates/service-rtmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-rtmp
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: frigate
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 1935
      targetPort: 1935
