cluster-apps/frigate/templates/ingress-rtmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: apps
spec:
  rules:
    - host: frigate-rtmp.w00t.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frigate
                port:
                  name: rtmp
